rollout-canary/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rollout-canary-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "5"
spec:
  rules:
  - host: c-948f4538-9ad1-4e85-a6b7-25c0813c1c5b-cloudyuga-28466807-frfvp.cloudyuga.guru
    http:
      paths:
      - backend:
          serviceName: rollouts-demo
          servicePort: 80
